@@ -97,8 +97,7 @@ class GetSources(BaseWindow):
             self.background_dialog.update(self.progress, message=text)
 
     def update_properties(self):
-        self.remaining_providers_list = self.getControl(2000)
-        try:
+
             # Set Resolution count properties
             self.setProperty('4k_sources', str(self.torrents_qual_len[0] + self.hosters_qual_len[0]))
             self.setProperty('1080p_sources', str(self.torrents_qual_len[1] + self.hosters_qual_len[1]))
@@ -115,12 +114,15 @@ class GetSources(BaseWindow):
 
             # Set remaining providers string
             self.setProperty("remaining_providers_count", str((len(self.remainingProviders))))
-            self.remaining_providers_list.reset()
-            self.remaining_providers_list.addItems(self.remainingProviders)
-            self.setProperty("remaining_providers_list", tools.color_string(' | ')
-                             .join([i.upper() for i in self.remainingProviders]))
-        except:
-            pass
+
+            try:
+                self.remaining_providers_list = self.getControl(2000)
+                self.remaining_providers_list.reset()
+                self.remaining_providers_list.addItems(self.remainingProviders)
+                self.setProperty("remaining_providers_list", tools.colorString(' | ')
+                                 .join([i.upper() for i in self.remainingProviders]))
+            except:
+                pass
 
     def setProgress(self):
         if not self.silent:
